# converter-yalokgar

./: CMakeLists.txt  CMakeLists_backup.txt  README.md  main.cpp
demo/: enterprise_showcase.cpp
include/core/: converter_engine.hpp  format_types.hpp  memory_manager.hpp  thread_pool.hpp
include/modules/archive/: archive_converter.hpp
include/modules/audio/: audio_converter.hpp
include/modules/binary/: binary_converter.hpp
include/modules/compression/: compression_converter.hpp
include/modules/crypto/: crypto_converter.hpp
include/modules/data/: data_converter.hpp
include/modules/document/: document_converter.hpp
include/modules/font/: font_converter.hpp
include/modules/image/: image_converter.hpp
include/modules/mesh/: mesh_converter.hpp
include/modules/video/: video_converter.hpp
include/modules/web/: web_converter.hpp
include/network/: distributed_converter.hpp
include/plugins/: plugin_manager.hpp
include/security/: encryption_manager.hpp
src/cli/: main.cpp
src/core/: converter_engine.cpp
src/gui/: main_window.cpp
src/modules/binary/: binary_converter.cpp
src/modules/compression/: compression_converter.cpp
src/modules/crypto/: crypto_converter.cpp
src/modules/font/: font_converter.cpp
src/modules/image/: image_converter.cpp
src/modules/mesh/: mesh_converter.cpp
src/modules/web/: web_converter.cpp
src/network/: distributed_converter.cpp
src/plugins/: plugin_manager.cpp
src/security/: encryption_manager.cpp
